docs/apache-airflow-providers-google/8.9.0/_sources/_api/tests/system/providers/google/cloud/automl/example_automl_vision_classification/index.rst.txt
:py:mod:`tests.system.providers.google.cloud.automl.example_automl_vision_classification`
=========================================================================================

.. py:module:: tests.system.providers.google.cloud.automl.example_automl_vision_classification

.. autoapi-nested-parse::

   Example Airflow DAG that uses Google AutoML services.



Module Contents
---------------

.. py:data:: ENV_ID

   

.. py:data:: DAG_ID
   :value: 'example_automl_vision'

   

.. py:data:: GCP_PROJECT_ID

   

.. py:data:: GCP_AUTOML_LOCATION

   

.. py:data:: GCP_AUTOML_VISION_BUCKET

   

.. py:data:: DATASET_ID
   :value: 'ICN123455678'

   

.. py:data:: MODEL

   

.. py:data:: DATASET

   

.. py:data:: IMPORT_INPUT_CONFIG

   

.. py:data:: extract_object_id

   

.. py:data:: create_dataset_task

   

.. py:data:: test_run

   

